fixed manual test issues from incorrect merge

--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -20,13 +20,13 @@
    </td></tr>
    <tr><td>
       <form id="TestWaterfallForm" onsubmit="return false;" method="post">
-         <textarea rows="2" cols="70" name="jsonobject" />"Enter JSON Waterfall  object here..."
+         <textarea rows="2" cols="70" name="jsonobject" />"Enter JSON Waterfall  object here..."</textarea>
          <input type="button" value="Submit" onclick="updateWaterfall(1, this.form)"/>
       </form>
    </td></tr>
    <tr><td>
       <form id="TestBaselineForm" onsubmit="return false;" method="post">
-         <textarea rows="2" cols="70" name="jsonobject" />"Enter JSON Baseline object here..."
+         <textarea rows="2" cols="70" name="jsonobject" />"Enter JSON Baseline object here..."</textarea>
          <input type="button" value="Submit" onclick="updateBaseline(1, this.form)"/>
       </form>
    </td></tr>
