Added iconification for beam locations on display 2

--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -31,6 +31,7 @@
 
 <%= javascript_tag do %>
   var display1_activity_path = '<%= display1_activity_path %>';
+  var display1_beam_path = '<%= display1_beam_path %>';
   var TIMEOUT_RETRY_LONG = <%= ApplicationController::TIMEOUT_RETRY_LONG %>;
   var TIMEOUT_ACTIVITY = <%= ApplicationController::TIMEOUT_ACTIVITY %>;
   var TIMEOUT_WEATHER = <%= ApplicationController::TIMEOUT_WEATHER %>;
