truncate beam frequency to 4 decimal places and made contextual info container background white

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -283,7 +283,7 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
 
-    background-color: #999;
+    background-color: #fff;
 }
 #contextual-info {
     position: relative;
