converts beam dec values ' and " to positive numbers only if they were negative. also updated qunit test

--- a/app/views/qunit/ui.html.erb
+++ b/app/views/qunit/ui.html.erb
@@ -71,7 +71,7 @@
       result = $('#beam' + id + ' .beam_status').text();
       equals(result, expected, "expected " + expected + " as the result, result was: " + result);
 
-      expected = "0h 49m 45.0s - 55° 23' 60.0\"";
+      expected = "0h 49m 45.0s / 55° 23' 60.0\"";
       result = $('#beam' + id + ' .beam_location').text();
       equals(result, expected, "expected " + expected + " as the result, result was: " + result);
 
