use an alt tag and force width/height of baseline image

--- a/app/views/display1/_baseline.html.erb
+++ b/app/views/display1/_baseline.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag "", :class => "baseline", :id => "baseline#{baseline_id}" %>
+<%= image_tag "", :class => "baseline", :id => "baseline#{baseline_id}", :width => baseline_width, :height => baseline_height, :alt => "No baseline data yet"   %>
