--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -199,17 +199,23 @@ body {
 
 .frequency_cover_data_table td.off {
     background-color: #FF0000;
-    background: -moz-linear-gradient(top, #ff0000, #AA0000);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0000', endColorstr='#AA0000'); /* for IE */
+    background: -moz-linear-gradient(top, #ff0000, #AA0000); /* for Firefox 3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, from( #ff0000), to(#AA0000)); /* for webkit browsers */
 }
 
 .frequency_cover_data_table td.on {
     background-color: #00FF00;
-    background: -moz-linear-gradient(top, #00ff00, #006a00);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ff00', endColorstr='#006a00'); /* for IE */
+    background: -moz-linear-gradient(top, #00ff00, #006a00); /* for Firefox 3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, from( #00ff00), to(#006a00)); /* for webkit browsers */
 }
 
 .frequency_cover_data_table td.current {
     background-color: #dddd00;
-    background: -moz-linear-gradient(top, #dddd00, #606000);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddd00', endColorstr='#606000'); /* for IE */
+    background: -moz-linear-gradient(top, #dddd00, #606000); /* for Firefox 3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, from( #dddd00), to(#606000)); /* for webkit browsers */
 }
 
 .frequency_cover_data_table td.arrow {
