--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -21,12 +21,13 @@
   <div id="weatherForecast">
     <div style='width: 728px; height: 90px; background-image: url( http://vortex.accuweather.com/adcbin/netweather_v2/backgrounds/black_728x90_bg.jpg ); background-repeat: no-repeat; background-color: #000000;' ><div id='NetweatherContainer' style='height: 74px;' ><script src='http://netweather.accuweather.com/adcbin/netweather_v2/netweatherV2ex.asp?partner=netweather&tStyle=whteYell&logo=1&zipcode=96040&lang=eng&size=11&theme=black&metric=0&target=_self'></script></div><div style='text-align: center; font-family: arial, helvetica, verdana, sans-serif; font-size: 11px; line-height: 16px; color: #FFFFFF;' ><div style='float: left; padding-left: 10px;'><a style='color: #FFFFFF' href='http://www.accuweather.com/us/CA/HAT CREEK/96040/city-weather-forecast.asp?partner=accuweather&traveler=0' >Weather Forecast</a> | <a style='color: #FFFFFF' href='http://www.accuweather.com/maps-satellite.asp' >Weather Maps</a> | <a style='color: #FFFFFF' href='http://www.accuweather.com/index-radar.asp?partner=accuweather&traveler=0&zipcode=96040' >Weather Radar</a> | <a style='color: #FFFFFF' href='http://hurricane.accuweather.com/hurricane/index.asp' >Hurricane Center</a></div><img style='float: right; padding-right: 5px;' src='http://vortex.accuweather.com/adc2004/common/images/misc/netweather_v2/adcwhite.png' /></div></div>
   </div>
-
+<!-- Remove comments when SETI webcam is working
   <div id="webcam">
     <img id="webcamImage1" class="webcam-image" src="http://atacam.seti.org/panorama/Pan1.jpg"/>
     <img id="webcamImage2" class="webcam-image" src="http://atacam.seti.org/panorama/Pan2.jpg"/>
     <img id="webcamImage3" class="webcam-image" src="http://atacam.seti.org/panorama/Pan3.jpg"/>
   </div>
+-->
 </div>
 
 <%= javascript_tag do %>
@@ -69,7 +70,7 @@
 <% if ApplicationController::WOS_MANUAL_TESTS == false %>
       updateActivity();
       timeoutManager.registerTimeout(function() { updateWeatherForecast(); },  TIMEOUT_WEATHER );
-      timeoutManager.registerTimeout(function() { updateWebCam(); },  TIMEOUT_WEBCAM );
+     # timeoutManager.registerTimeout(function() { updateWebCam(); },  TIMEOUT_WEBCAM );
       setInterval(function(){scrollContextualInfo()}, TIMEOUT_CONTEXTUAL_SCROLL);
 <% end %>
   })
