--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -35,8 +35,9 @@
 
 <div id="display1_header">
   <div class="text-large"><%= image_tag "logo_seti.png" %></div>
-  <div class="text-title-yellow" style="padding-left:25px; width:1150px;">Current Status: <span id="current-observation-id">?</span></div>
+  <div class="text-title-yellow" style="padding-left:25px; width:1000px;">Current Status: <span id="current-observation-id">?</span></div>
   <div class="text-title-yellow">Activity ID: <span id="activity-id">?</span></div>
+  <div class="logo-cmusv"><%= image_tag "logo_cmusv.jpg", :width => "300px", :style => "float:right;" %></div>
   <div class="float-wall"></div>
 </div>
 
@@ -46,7 +47,6 @@
 <%= render 'beam', :beam_id => 2 %>
 <div class="divider-horizontal"></div>
 <%= render 'beam', :beam_id => 3 %>
-
 <%= javascript_tag do %>
   var display1_activity_path = '<%= display1_activity_path %>';
   var display1_waterfall_path = '<%= display1_waterfall_path %>';
