Added CMUSV logo to display2

--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -37,7 +37,7 @@
   <div class="text-large"><%= image_tag "logo_seti.png" %></div>
   <div class="text-title-yellow" style="padding-left:25px; width:1000px;">Current Status: <span id="current-observation-id">?</span></div>
   <div class="text-title-yellow">Activity ID: <span id="activity-id">?</span></div>
-  <div class="logo-cmusv"><%= image_tag "logo_cmusv.jpg", :width => "300px", :style => "float:right;" %></div>
+  <div class="logo-cmusv"><%= image_tag "logo_cmusv.jpg", :width => "300px" %></div>
   <div class="float-wall"></div>
 </div>
 
